// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PeopleList renders a error message when request fails 1`] = `
<div
  className="error"
>
  There was an error loading list of People.
</div>
`;

exports[`PeopleList renders a list of people when request passes 1`] = `
<PeopleList
  className="peoplelist"
>
  <PeopleItem
    key="0"
  >
    <span>
      Ankur
    </span>
    <span>
      CEO
    </span>
  </PeopleItem>
  <PeopleItem
    key="1"
  >
    <span>
      Aliya
    </span>
    <span>
      Developer
    </span>
  </PeopleItem>
  <PeopleItem
    key="2"
  >
    <span>
      Bassam
    </span>
    <span>
      Developer
    </span>
  </PeopleItem>
</PeopleList>
`;

exports[`PeopleList renders a loading message when requesting data 1`] = `
<div
  className="loading"
>
  Loading the list of People...
</div>
`;
